--- a/extension/tell-me-my-items/package.json
+++ b/extension/tell-me-my-items/package.json
@@ -10,7 +10,12 @@
     "Other"
   ],
   "activationEvents": [
-    "onLanguage:sfml"
+    "onCommand:tmmi.reloadFromPath",
+    "onCommand:tmmi.disableSuggestions",
+    "onLanguage:sfml",
+    "onLanguage:zenscript",
+    "onLanguage:javascript",
+    "onLanguage:typescript"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -24,7 +29,17 @@
           "scope": "window"
         }
       }
-    }
+    },
+		"commands": [
+			{
+				"command": "tmmi.reloadFromPath",
+				"title": "TMMI: Reload from configured path"
+			},
+      {
+        "command": "tmmi.disableSuggestions",
+        "title": "TMMI: Disable suggestions"
+      }
+		]
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
