--- a/extension/package.json
+++ b/extension/package.json
@@ -41,6 +41,11 @@
       }
 		]
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TeamDman/tell-me-my-items"
+    "directory": "extension"
+  },
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
