--- a/extension/package.json
+++ b/extension/package.json
@@ -43,7 +43,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/TeamDman/tell-me-my-items"
+    "url": "https://github.com/TeamDman/tell-me-my-items",
     "directory": "extension"
   },
   "scripts": {
